<resources>
    <string name="app_name" translatable="false">Teste</string>

    <string name="tv13">Valor inicial:</string>
    <string name="et13">Valor em R$ Ex.: 1700.00</string>

    <string name="tv23">Aplicação mensal:</string>
    <string name="et23" translatable="false">Ex.: 100.00</string>

    <string name="tv33">Tempo da aplicação:</string>
    <string name="et33">Em meses</string>

    <string name="tv43">Taxa:</string>
    <string name="et43" translatable="false">Ex.: 0.02</string>

    <string name="btnCalc3">CALCULAR</string>

    <string name="tela4tv1">Consumo total R$:</string>
    <string name="tela4tv2">Couvert artístico R$:</string>
    <string name="tela4tv3">Dividir conta por:</string>

    <string name="btntela4">Calcular conta final</string>

    <string name="tela4tv4">Taxa de serviço (10%) R$:</string>
    <string name="tela4tv5">Conta total R$:</string>
    <string name="tela4tv6">Valor por pessoa R$:</string>
</resources>